// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Matches Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.625rem;
  height: 24px;
  -webkit-letter-spacing: 0.011rem;
  -moz-letter-spacing: 0.011rem;
  -ms-letter-spacing: 0.011rem;
  letter-spacing: 0.011rem;
  width: 24px;
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches large avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 1.5rem;
  height: 80px;
  width: 80px;
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches large avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 1.5rem;
  height: 80px;
  width: 80px;
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches medium avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 1rem;
  height: 48px;
  width: 48px;
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches medium avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 1rem;
  height: 48px;
  width: 48px;
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches mobile Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.75rem;
  height: 32px;
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: 32px;
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches mobile avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 0.75rem;
  height: 32px;
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: 32px;
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches mobile large avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 1.5rem;
  height: 72px;
  width: 72px;
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches mobile large avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 1.5rem;
  height: 72px;
  width: 72px;
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches mobile medium avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 1rem;
  height: 48px;
  width: 48px;
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches mobile medium avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 1rem;
  height: 48px;
  width: 48px;
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches mobile small avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.875rem;
  height: 40px;
  -webkit-letter-spacing: 0.014rem;
  -moz-letter-spacing: 0.014rem;
  -ms-letter-spacing: 0.014rem;
  letter-spacing: 0.014rem;
  width: 40px;
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches mobile small avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 0.875rem;
  height: 40px;
  -webkit-letter-spacing: 0.014rem;
  -moz-letter-spacing: 0.014rem;
  -ms-letter-spacing: 0.014rem;
  letter-spacing: 0.014rem;
  width: 40px;
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;

exports[`Avatar Matches small avatar Snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F1F2F2;
  border-radius: 50%;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: var(--font-semi-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  font-size: 0.75rem;
  height: 32px;
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: 32px;
}

<div
  aria-label="AB avatar"
  class="c0"
  role="img"
>
  <span
    data-testid="avatar-initials"
  >
    AB
  </span>
</div>
`;

exports[`Avatar Matches small avatar with image Snapshot 1`] = `
.c0 {
  border-radius: 50%;
  object-fit: cover;
  font-size: 0.75rem;
  height: 32px;
  -webkit-letter-spacing: 0.013rem;
  -moz-letter-spacing: 0.013rem;
  -ms-letter-spacing: 0.013rem;
  letter-spacing: 0.013rem;
  width: 32px;
}

<img
  alt="AB avatar"
  class="c0"
  src="anImage"
/>
`;
